# Experiments

./: .gitignore
LatticeBoltzmann/0923/: task1.m
helm/: CMakeLists.txt  plotout.m
helm/src/: eqn.h  helmFD.cpp  helmFD.h  helmFE.cpp  helmFE.h  mainprog.cpp  mesh.cpp  mesh.h  utils.h
pinn/: EXP_14.ipynb  exp (1).ipynb  exp.ipynb
pinn2/: deepsmall_wv_10_110_smallgrid.pth  doesitfit.m  experiment.ipynb
